...
            android:paddingBottom="88dp"
            tools:listitem="@layout/item_kritik_saran"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="#97594D29"
...
